<resources>
    <string name="app_name">NoteBook</string>

    <!-- Strings related to login -->
    <string name="alert_enter_name">Enter a user name</string>
    <string name="alert_email_not_valid">Enter a valid email address</string>
    <string name="alert_password_length_error">Password should contain minimum of 6 characters and maximum of 20 characters</string>
    <string name="alert_password_digits_error">Password should contain at least one number</string>
    <string name="alert_password_lowercase_error">Password should contain at least one lowercase character</string>
    <string name="alert_password_uppercase_error">Password should contain at least one uppercase character</string>
    <string name="alert_password_specials_error">Password should contain at least one special character</string>
    <string name="alert_password">Password must be 6 to 21 characters including uppercase letter, special character and alphanumeric character</string>
    <string name="alert_password_mismatch">Password do not match</string>

    <string name="creating_account">Creating Account...</string>
    <string name="email_already_exists">Email Already Exists</string>
    <string name="registration_successful">Registration successful</string>
    <string name="login_failed">Incorrect username or password</string>
    <string name="login_success">Login success</string>
    <string name="authenticating">Authenticating...</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="not_a_member_sign_up">Not a member? Sign up now.</string>
    <string name="already_registered_login">Already registered! Login Me.</string>
    <string name="title_activity_notes_list">NotesListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">LogOut</string>
    <string name="search">Search</string>

    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="description">Description</string>
    <string name="note_hint">1. Click a note to view and edit \n 2. Swipe left/right to delete a note</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="done">Done</string>

    <!-- Dropbox API Key-->
    <string name="app_key">db-3672vr0mw4vv4j5</string>
    <string name="app_secret">44xh0rnna9o4kmk</string>
    <string name="access_token">HlTbHzbE8hwAAAAAAAAG5Y321XmuNMDpjY_P7aNNfjbitVKB-Ck0wBY3t6Cife08</string>
</resources>
